# Snipe

./: .env.example  .gitignore  AGENTS.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: answer_evaluation.py  application_materials.py  career_transition.py  claim_verification.py  context.py  interview.py  linkedin_optimization.py  llm.py  markdown.py  mock_interview.py  outreach.py  profile_interpreter.py  provider_status.py  providers.py  resume_rewrite.py  roadmap.py  schemas.py  tailoring.py
backend/app/analysis/: github_profile.py  linkedin.py  portfolio.py  resume_quality.py
backend/app/auth/: dependencies.py
backend/app/core/: config.py  rate_limit.py  request_context.py
backend/app/integrations/: github.py  portfolio.py
backend/app/jobs/: job_parser.py  retrieval.py  schemas.py
backend/career_intelligence_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_ai_interpretation.py  test_auth.py  test_basic_report.py  test_claim_verification.py  test_generated_outputs.py  test_github_source.py  test_health.py  test_job_descriptions.py  test_job_matches.py  test_mock_interview.py  test_optional_sources.py  test_outreach_transition.py  test_privacy.py  test_profile_builder.py  test_rag.py  test_rate_limit.py  test_readiness_dashboard.py  test_readiness_scoring.py  test_resume_parser.py  test_resume_quality_analysis.py  test_resume_upload.py  test_skill_gap.py  test_skill_taxonomy.py  test_storage_paths.py  test_supabase_migration.py  test_usage_events.py
(+103 files in other folders)
