[project]
name = "career-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Career Intelligence Platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "PyJWT>=2.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
